# PlayListWidget

./: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  PlayListDTOs.hpp  PlayListHeaderWidget.cpp  PlayListHeaderWidget.ui  PlayListItemWidget.cpp  PlayListItemWidget.hpp  PlayListItemWidget.ui  PlayListWidget.cpp  PlayListWidget.hpp
src/: DropIndicator.cpp  DropIndicator.hpp  PlayListDTOs.hpp  PlayListHeaderWidget.cpp  PlayListHeaderWidget.hpp  PlayListHeaderWidget.ui  PlayListItemStatusWidget.cpp  PlayListItemStatusWidget.hpp  PlayListItemStatusWidget.ui  PlayListItemTitleInfo.cpp  PlayListItemTitleInfo.hpp  PlayListItemTitleInfo.ui  PlayListItemWidget.cpp  PlayListItemWidget.hpp  PlayListItemWidget.ui  PlayListStyleSheets.cpp  PlayListStyleSheets.hpp  PlayListWidget.cpp  PlayListWidget.hpp  TimeDisplay.cpp  TimeDisplay.hpp  TimeDisplay.ui
test/: ControlWindow.cpp  ControlWindow.hpp  ControlWindow.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  PlayListWindow.cpp  PlayListWindow.hpp  PlayListWindow.ui  main.cpp
